--- a/todos/package.json
+++ b/todos/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "redux-counter-example",
+  "name": "redux-todos-example",
   "version": "0.0.0",
-  "description": "Redux counter example",
+  "description": "Redux Todos example",
   "scripts": {
     "start": "node server.js",
     "test": "cross-env NODE_ENV=test mocha --recursive --compilers js:babel-register --require ./test/setup.js",
@@ -17,10 +17,11 @@
   },
   "homepage": "http://redux.js.org",
   "dependencies": {
+    "babel-polyfill": "^6.3.14",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-redux": "^4.2.1",
-    "redux": "^3.2.1"
+    "react-redux": "^4.1.2",
+    "redux": "^3.1.2"
   },
   "devDependencies": {
     "babel-core": "^6.3.15",
@@ -30,7 +31,7 @@
     "babel-preset-react-hmre": "^1.0.1",
     "babel-register": "^6.3.13",
     "cross-env": "^1.0.7",
-    "expect": "^1.6.0",
+    "expect": "^1.8.0",
     "express": "^4.13.3",
     "jsdom": "^5.6.1",
     "mocha": "^2.2.5",
